# nvmalloc

./: Makefile  README.md  c_io.cc  c_io.h  cache_flush.cc  chunk_mmap.c  cscope.out  hash_maps.cc  jemalloc.c  nv_debug.cc  nv_def.h  nv_map.cc  nv_map.h  nv_structs.h  nv_transact.cc  util_func.cc  util_func.h  varname_commit_test  varname_commit_test.cc
NVM_EMUL/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  cmake_install.cmake  nvmemul.ini
NVM_EMUL/micro-bench/memthrottle/memthrottle/memlat/: .memlat.c.swo  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  memlat  memlat.c  memlat.h  memlat.py  memlat.sh  memlat_chain  memlat_chain.c  memlat_chain.py  memlat_chain_monitor.py  out  out.bak  out_chain  rdpmc.h  time_memlat_chain.py
NVM_EMUL/pmc_driver/pmc/: .out.txt.swp  count  (+17 more)
NVM_EMUL/pmc_mt/: .nvm_emul_mt.c.swp  README  a.out  nvm_emul_mt.c  test  test.c
NVM_EMUL/scripts/: runenv.sh  setupdev.sh
NVM_EMUL/src/: Makefile  cmake_install.cmake
NVM_EMUL/src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  config.c  config.h  debug.c  debug.h  dev.c  dev.h  errno.h  error.h  init.c  interpose.c  interpose.h  measure_bw.c  measure_bw.h  model.h  model_bw.c  model_lat.c  pmalloc.c  pmalloc.h  stat.c  stat.h  thread.c  thread.h  topology.c  topology.h
NVM_EMUL/src/lib/cpu/: CMakeLists.txt  Makefile  cmake_install.cmake  cpu.c  cpu.h  known_cpus.h  xeon-e5.h
NVM_EMUL/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_dev.cc  test_interpose.cc
checkpoint/: c_io.cc_bck  checkpoint.cc
compare_bench/btree-1.0/: Makefile  config.status
hoard/src/: cscope.out
nvkernel_test_code/: clear_persist.c  ramdisk_create.sh
optimized/: nv_map.cc
pvmobj/: nv_def.h  nv_map.cc
scripts/: likwid_instrcnt.sh  mount_pmfs.sh  vtune_all.sh
src/: Makefile
src/libpmemobj/: Makefile
test/: Makefile  load_file.cc  nonpersist_alloc.cc  nv_read_test_alloc.cc  nv_restart_test.cc  nvmalloc_cc_test.cc  out.txt  persist_alloc.cc  persist_alloc_read.cc  run_test_pin.sh  varname_alloc_test.cc  varname_commit_test.cc
(+55 files in other folders)
